# techtonica

./: README.md  flake.nix  recipes.yaml  tech.yaml  techtonica.cabal  test.yaml
.nlsp-settings/: hls.yml
src/Tech/: Ghci.hs  Graph.hs  Items.hs  LensOptions.hs  Machines.hs  Mermaid.hs  Planner.hs  Pretty.hs  Recipes.hs  Store.hs  TH.hs  TestFixtures.hs  Types.hs  Verify.hs
src/Tech/Ghci/: Factory.hs  FactoryEnv.hs  Planning.hs  Recipes.hs  State.hs  Utils.hs
src/Tech/Planner/: Estimate.hs  Propose.hs
src/Tech/Recipes/: Assembler.hs  Planter.hs  Thresher.hs
src/Tech/Store/: AesonOptions.hs  Orphans.hs
tests/: ArbitraryTypes.hs  TestPlanner.hs  TestStore.hs  TestTypes.hs  TestUtils.hs  TestVerify.hs  test.hs
