cabal-version: 2.4
name: techtonica
version: 0.1.0.0
license: MIT

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
      NoStarIsType
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      DerivingVia
      EmptyCase
      EmptyDataDecls
      EmptyDataDeriving
      ExistentialQuantification
      ExplicitForAll
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTSyntax
      GeneralisedNewtypeDeriving
      ImportQualifiedPost
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NumericUnderscores
      OverloadedLists
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      PostfixOperators
      QuasiQuotes
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      StandaloneKindSignatures
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      ViewPatterns

  build-depends:
    , base          >=4.13.0.0 && <4.18.0.0.0
    , aeson
    , containers
    , fgl
    , lens
    , mtl
    , prettyprinter
    , prettyprinter-ansi-terminal
    , relude        >=1.0
    , semialign
    , template-haskell
    , text
    , these
    , time
    , yaml

  default-language: Haskell2010

library
  import: shared
  hs-source-dirs: src
  exposed-modules:
    Tech.Ghci
    Tech.Items
    Tech.Machines
    Tech.Planner
    Tech.Pretty
    Tech.Recipes
    Tech.Recipes.Assembler
    Tech.Recipes.Planter
    Tech.Recipes.Thresher
    Tech.Store
    Tech.Store.AesonOptions
    Tech.Store.Orphans
    Tech.TestFixtures
    Tech.TH
    Tech.Types
    Tech.Verify

test-suite techtonica-tests
  import: shared
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: test.hs
  build-depends:
    , base
    , HUnit
    , QuickCheck
    , quickcheck-instances
    , aeson-diff
    , aeson-qq
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , techtonica
  other-modules:
    ArbitraryTypes
    TestPlanner
    TestStore
    TestTypes
    TestUtils
    TestVerify
